fix: remove header margins on mobile

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -23,6 +23,7 @@
 
   @include grid.media-md {
     background: none;
+    padding: 0;
   }
 }
 
@@ -31,4 +32,8 @@
 
   font-size: 2.5rem;
   text-align: center;
+
+  @include grid.media-md {
+    margin: 0;
+  }
 }
